# storybook_fun_factory

./: .gitignore  LICENSE  README.md  debug_import_issue.py  poetic_renamer.py  pyproject.toml  pytest.ini  safe_poetic_renamer.py  skip_safe_poetic_renamer.py  start_factory.ps1
game_construction_bay/: README.md
game_construction_bay/high_command/: README.md
game_construction_bay/high_command/s1_1_the_voice_that_guides_the_recursion_forward/: README.md  milestones.md
game_construction_bay/visualizer/: README.md
logs/: symbolic_recall_log.txt
shagi_archives/: main_index.md  memory_traces.md  poetic_index.md  stanza_registry.md
shagi_archives/gdd/: index.md
shagi_archives/gdd/gdd_01_index/: index_of_indexes.md  s1_1_index_of_gdd_01_index.md  s1_1_index_of_indexes.md  s1_2_index_of_gdd_02_workflow.md  s1_3_index_of_gdd_03_intro_structure.md  s1_4_index_of_gdd_04_core_framework.md  s2_1_index_of_gdd_05_storybook_ui.md  s2_2_index_of_gdd_06_multiplayer.md  s2_3_index_of_gdd_07_ai_behaviors.md  s2_4_index_of_gdd_08_gameplay_loops.md  s3_1_index_of_gdd_09_worldbuilding.md  s3_2_index_of_gdd_10_architecture.md  s3_3_index_of_gdd_11_narrative_design.md  s3_4_index_of_gdd_12_gold_standard_doctrine.md  s3_4_index_of_gold_standards.md  s4_1_index_of_gdd_13_recursive_tools_and_migration.md  s4_2_index_of_gdd_14_placeholder.md  s4_4_index_of_gdd_16_placeholder.md
shagi_archives/gdd/gdd_02_workflow/: s1_1_codex_workflow_scaling_plan.md  s1_2_player_editing_routines.md  s1_3_archival_partitioning_rules.md  s1_4_placeholder.md
shagi_archives/gdd/gdd_03_intro_structure/: s1_1_recursive_scaffolding.md  s1_2_poetic_and_technical_harmony.md  s1_3_folder_naming_guidelines.md  s1_4_prefix_doctrine_and_namespace_law.md
shagi_archives/gdd/gdd_04_core_framework/: s1_1_codex_builder.md  s1_2_dream_journal.md  s1_3_filename_ai.md  s1_4_memory_ai.md  s2_2_placeholder.md  s2_3_placeholder.md  s2_4_placeholder.md
shagi_archives/gdd/gdd_05_storybook_ui/: s1_2_page_turning_and_navigation.md  s1_3_diagrammatic_view_and_poetic_overlay.md  s2_1_the_grand_plan_interface_doctrine.md  s2_2_recursive_page_structure_and_symbolism.md  (+1 more)
shagi_archives/gdj/: index.md
shagi_archives_built/appendices/: index.md
src/shagi_archives/: main_index.md
src/storybook_fun_factory/: __init__.py
tests/: conftest.py  test_1_1_a_line_once_moved_but_none_could_see.py  test_1_1_a_verse_is_born_but_cannot_live.py  test_1_2_until_a_name_the_form_must_give.py  test_1_3_the_line_must_twist_the_word_must_bend.py  test_1_4_to_meet_the_code_yet_not_transcend.py  test_2_1_a_whisper_shaped_to_match_the_shell.py  test_2_2_where_stanza_breath_and_syntax_dwell.py  test_2_3_four_lines_compose_the_form_in_flame.py  test_2_4_a_system_singing_through_its_name.py
tests/test_helpers/: dynamic_importer.py  test_scaffold_navigator.py
(+1791 files in other folders)
