[tool.poetry]
name = "storybook-fun-factory"
version = "0.1.0"
description = "A recursive sandbox for testing assistant delegation systems in Storybook."
authors = ["Your Name <you@example.com>"]
license = "MIT"
readme = "README.md"
packages = [
    { include = "storybook_fun_factory", from = "src" }
]

[tool.poetry.dependencies]
python = "^3.11"
rich = "^13.5.2"

[tool.poetry.group.dev.dependencies]
black = "^23.7.0"
pytest = "^7.4.0"
ruff = "^0.5.3"
mypy = "^1.4.1"

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.ruff]
line-length = 100
select = ["E", "F", "I"]
ignore = ["E501"]

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
