[tool.poetry]
name = "storybook-fun-factory"
version = "0.1.0"
description = "A recursive sandbox for testing assistant delegation systems in Storybook."
authors = ["Mark Roy Gillam <hyper5ai@yahoo.com.au>"]
license = "MIT"
readme = "README.md"
packages = [
    { include = "storybook_fun_factory", from = "src" }
]

[tool.poetry.dependencies]
python = "^3.11"
rich = "^13.5.2"
networkx = "^3.4.2"
matplotlib = "^3.10.1"
scipy = "^1.15.2"
pronouncing = "^0.2.0"
setuptools = "^80.1.0"

[tool.poetry.group.dev.dependencies]
black = "^23.7.0"
pytest = "^7.4.0"
ruff = "^0.5.3"
mypy = "^1.4.1"

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.ruff]
line-length = 100
select = ["E", "F", "I"]
ignore = ["E501"]

[tool.pytest.ini_options]
pythonpath = ["src", "game_construction_bay"]
minversion = "6.0"
addopts = "-ra -q"
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
